<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightgrey"
    tools:context=".ExpenseCategoryChoice">


    <RelativeLayout
        android:id="@+id/relativelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            app:cardCornerRadius="10dp"
            android:layout_margin="20dp">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:layout_gravity="center"
                android:layout_marginVertical="10dp"/>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_expensedomains"
        android:textSize="25dp"
        app:layout_constraintTop_toBottomOf="@id/relativelayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/p2_darkest"
        android:textStyle="bold"
        android:layout_marginHorizontal="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardCornerRadius="20dp"
                android:layout_margin="15dp">
                <LinearLayout
                    android:id="@+id/food"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="20dp"
                    android:paddingVertical="10dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="5dp"
                        android:src="@drawable/ic_food"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/food"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:textColor="@color/p2_darkest"
                        android:textSize="22dp"
                        android:gravity="center"
                        android:padding="5dp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardCornerRadius="20dp"
                android:layout_margin="15dp">
                <LinearLayout
                    android:id="@+id/travel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="20dp"
                    android:paddingVertical="10dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="5dp"
                        android:src="@drawable/ic_travel"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/travel"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:textColor="@color/p2_darkest"
                        android:textSize="22dp"
                        android:gravity="center"
                        android:padding="5dp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardCornerRadius="20dp"
                android:layout_margin="15dp">
                <LinearLayout
                    android:id="@+id/home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="20dp"
                    android:paddingVertical="10dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="5dp"
                        android:src="@drawable/ic_home"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/home"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:textColor="@color/p2_darkest"
                        android:textSize="22dp"
                        android:gravity="center"
                        android:padding="5dp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardCornerRadius="20dp"
                android:layout_margin="15dp">

                <LinearLayout
                    android:id="@+id/other"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="20dp"
                    android:paddingVertical="10dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="5dp"
                        android:src="@drawable/ic_others"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/others"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:textColor="@color/p2_darkest"
                        android:textSize="22dp"
                        android:gravity="center"
                        android:padding="5dp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>