<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightgrey"
    tools:context=".Choice">

    <RelativeLayout
        android:id="@+id/relativelayout"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/nav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:cardCornerRadius="10dp"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_outline_dashboard_24"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"/>
    </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/nav"
            android:layout_centerVertical="true"
            android:textSize="20dp"
            android:textColor="@color/p2_darkest"
            android:textStyle="bold"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            app:cardCornerRadius="10dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_share_24"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"/>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="25dp"
        app:layout_constraintTop_toBottomOf="@id/relativelayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/p2_darkest"
        android:textStyle="bold"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"/>

    <LinearLayout
        app:layout_constraintTop_toTopOf="@id/title"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/seecalendar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="20dp"
            android:layout_margin="15dp">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="20dp"
                android:padding="10dp"
                android:background="@color/white">

<!--                <ImageView-->
<!--                    android:id="@+id/tagimage"-->
<!--                    android:layout_width="50dp"-->
<!--                    android:layout_height="50dp"-->
<!--                    android:layout_margin="5dp"-->
<!--                    android:src="@drawable/ic_baseline_calendar_today_24"-->
<!--                    app:tint="@color/p2_dark"-->
<!--                    android:layout_gravity="center"/>-->
                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:lottie_rawRes="@raw/calender"
                    android:layout_gravity="center"
                    app:lottie_autoPlay="true"
                    app:lottie_repeatCount="300"
                    app:lottie_repeatMode="restart"/>

                <TextView
                    android:id="@+id/amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/option1"
                    android:layout_gravity="center"
                    android:textColor="@color/p2_darkest"
                    android:textSize="18dp"
                    android:gravity="center"
                    android:paddingVertical="5dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/seeexpenses"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="20dp"
            android:layout_margin="15dp">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="20dp"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:background="@color/white">

<!--            <ImageView-->
<!--                android:layout_width="50dp"-->
<!--                android:layout_height="50dp"-->
<!--                android:layout_margin="5dp"-->
<!--                android:src="@drawable/ic_baseline_attach_money_24"-->
<!--                app:tint="@color/p2_dark"-->
<!--                android:layout_gravity="center"/>-->
            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:lottie_rawRes="@raw/money"
                android:layout_gravity="center"
                app:lottie_autoPlay="true"
                app:lottie_repeatCount="300"
                app:lottie_repeatMode="restart"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option2"
                android:layout_gravity="center"
                android:textColor="@color/p2_darkest"
                android:textSize="18dp"
                android:gravity="center"
                android:paddingVertical="5dp" />

        </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <androidx.cardview.widget.CardView
        android:id="@+id/seegraph"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:cardCornerRadius="20dp"
        android:layout_margin="15dp">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="20dp"
            android:padding="10dp"
            android:background="@color/white">

<!--            <ImageView-->
<!--                android:layout_width="50dp"-->
<!--                android:layout_height="50dp"-->
<!--                android:layout_margin="5dp"-->
<!--                android:src="@drawable/ic_baseline_insert_chart_outlined_24"-->
<!--                app:tint="@color/p2_dark"-->
<!--                android:layout_gravity="center"/>-->

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:lottie_rawRes="@raw/graph"
                android:layout_gravity="center"
                app:lottie_autoPlay="true"
                app:lottie_repeatCount="300"
                app:lottie_repeatMode="restart"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option3"
                android:layout_gravity="center"
                android:textColor="@color/p2_darkest"
                android:textSize="18dp"
                android:gravity="center"
                android:paddingVertical="5dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/organise"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="20dp"
            android:layout_margin="15dp">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="20dp"
                android:padding="10dp"
                android:background="@color/white">

<!--                <ImageView-->
<!--                    android:layout_width="50dp"-->
<!--                    android:layout_height="50dp"-->
<!--                    android:layout_margin="5dp"-->
<!--                    android:src="@drawable/ic_baseline_calendar_today_24"-->
<!--                    app:tint="@color/p2_dark"-->
<!--                    android:layout_gravity="center"/>-->


                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:lottie_rawRes="@raw/plannnnnn"
                    android:layout_gravity="center"
                    app:lottie_autoPlay="true"
                    app:lottie_repeatCount="300"
                    app:lottie_repeatMode="restart"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/option4"
                    android:textColor="@color/p2_darkest"
                    android:textSize="18dp"
                    android:gravity="center"
                    android:paddingVertical="5dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>